--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "base64url": "^2.0.0",
     "body-parser": "^1.15.2",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "node-fetch": "^2.1.2"
   },
   "scripts": {
     "start": "node app.js"
