--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "base64url": "^2.0.0",
     "body-parser": "^1.15.2",
     "express": "^4.15.4",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "uuid": "^3.3.2",
+    "validator": "10.4.0"
   },
   "scripts": {
     "start": "node app.js"
