--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.15.4",
     "node-fetch": "^2.1.2",
     "uuid": "^3.3.2",
-    "validator": "10.4.0"
+    "validator": "10.4.0",
+    "cors": "^2.8.4"
   },
   "scripts": {
     "start": "node app.js"
